refactor funcion buscar tickets java 8